# -Universal-Debug-Emulator-Toolkit

./: .gitignore  CMakeLists.txt
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
docs/: ARCHITECTURE.md
src/: main.cpp
src/core/: BinaryReader.h  FormatReader.h  MarshalReader.cpp  MarshalReader.h
src/engines/rpgmaker/: RxdataParser.cpp  RxdataParser.h
